--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -1,17 +1,9 @@
 :root {
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
-
-  /* color-scheme: light dark; */
-  /* color: rgba(255, 255, 255, 0.87); */
+  min-height: 100vh;
   color: black;
   background-color: lightblue;
-
-  /* font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
 }
 
 a {
@@ -25,10 +17,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  margin-top: 20vh;
   min-width: 320px;
-  min-height: 100vh;
+  height: 80vh;
 }
 
 h1 {
