feat: android adpu service 세팅 정리, stop nfc interface 추가

--- a/virtual_bridge/android/app/src/main/res/xml/apduservice.xml
+++ b/virtual_bridge/android/app/src/main/res/xml/apduservice.xml
@@ -1,5 +1,5 @@
 <host-apdu-service xmlns:android="http://schemas.android.com/apk/res/android"
-                   android:description="@string/servicedesc" android:requireDeviceScreenOn="false" android:requireDeviceUnlock="false">
+                   android:description="@string/servicedesc" android:requireDeviceScreenOn="true" android:requireDeviceUnlock="true" android:exported="true">
     <aid-group android:description="@string/aiddescription"  android:category="other" >
         <aid-filter android:name="D2760000850101"/>
     </aid-group>
