--- a/apps/client/src/index.css
+++ b/apps/client/src/index.css
@@ -1,46 +1,37 @@
+@import "tailwindcss";
+@config "../tailwind.config.js";
+
+@font-face {
+	font-family: "Press Start 2P"; /* Tailwind 설정과 일치시킬 이름 */
+	font-style: normal;
+	font-weight: 400; /* 폰트 파일에 맞는 weight */
+	font-display: swap; /* 폰트 로딩 시 깜빡임 최소화 */
+	src: url("/ui/fonts/PressStart2P-Regular.ttf") format("truetype");
+}
+
 :root {
-  line-height: 1.5;
-  font-weight: 400;
-  min-height: 100vh;
-  color: black;
-  background-color: lightblue;
+	line-height: 1.5;
+	min-height: 100vh;
+	color: black;
+	background-color: lightblue;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+	color: #535bf2;
 }
 
 body {
-  margin: 0;
-  min-width: 320px;
+	font-family: "Press Start 2P", sans-serif;
+	margin: 0;
+	min-width: 320px;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  color: white;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+	font-size: 3.2em;
+	line-height: 1.1;
 }
