--- a/apps/game/src/ui/GameMenu/style.css
+++ b/apps/game/src/ui/GameMenu/style.css
@@ -1,29 +1,37 @@
 .game-menu-container {
-	position: absolute;
-	bottom: 0px;
-	display: flex;
-	justify-content: space-around;
-	width: 100%;
-	max-width: 500px;
+  position: absolute;
+  bottom: 0px;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 500px;
 }
 
 .game-menu-item {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-image: url("/game/sprites/menu-items.png");
-	background-repeat: no-repeat;
-	background-size: cover;
-	user-select: none;
-	scale: 0.7;
-	opacity: 0.6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("/game/sprites/menu-items.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  user-select: none;
+  scale: 0.7;
+  opacity: 0.6;
 }
 
 /* 포커스 효과 */
 .game-menu-item.focused {
-	opacity: 1;
-	transform: scale(1.1);
-	filter: drop-shadow(0 0 1px rgba(255, 255, 255, 0.9))
-		drop-shadow(0 0 1px rgba(255, 255, 255, 0.7));
-	z-index: 1;
+  opacity: 1;
+  transform: scale(1.1);
+  filter: drop-shadow(0 0 1px rgba(255, 255, 255, 0.9))
+    drop-shadow(0 0 1px rgba(255, 255, 255, 0.7));
+  z-index: 1;
+}
+
+/* 비활성화된 메뉴 스타일 - 빨간색 필터 통합 */
+.game-menu-item.disabled {
+  filter: brightness(0) saturate(100%) invert(15%) sepia(100%) saturate(6932%)
+    hue-rotate(0deg) brightness(100%) contrast(124%);
+  opacity: 0.26;
+  cursor: not-allowed;
 }
